fix: fixed style error when footer overlaps navigation, positioning of the pager in administration

--- a/example/client/app/admin/admin.less
+++ b/example/client/app/admin/admin.less
@@ -16,6 +16,11 @@
 //@import '../../assets/bower_components/baboon-client/modules/navigation/navigation_dark';
 
 
+.panel-footer{
+  .row{
+    margin:0;
+  }
+}
 
 //WICHTIG BITTE IMMER DRIN LASSEN
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
